Change to 2 rooms types

--- a/views/screen.jade
+++ b/views/screen.jade
@@ -4,6 +4,6 @@ block content
   h1 = title
   p Welcome to #{title}
   p#ping Connecting ...
-  p#connected Total connected : 1
+  p#connected Total Clients : 0
 
   script(type='text/javascript', src='/javascripts/	screen.js')
