--- a/views/layout.jade
+++ b/views/layout.jade
@@ -7,5 +7,7 @@ html
 
     script(type='text/javascript', src='/socket.io/socket.io.js')
     script(type='text/javascript', src='/javascripts/game.js')
+    script(type='application/javascript', src='/javascripts/fastclick.min.js')
+    meta(name="viewport", content="initial-scale=1.0, user-scalable=no")
   body
     block content
