--- a/views/controller.jade
+++ b/views/controller.jade
@@ -1,10 +1,80 @@
 extends layout
 
 block content
+	h1 = title
+	p Welcome to #{title}
+	p#ping msec
 
-  h1 = title
-  p Welcome to #{title}
-  p#ping msec
-  input(type='button', onclick='controlclick()', value='Click Moi')
+	div(class='controllerLeft')
+		table
+			tr
+				td
+				td
+					input(type='button', class='button', onclick='controlclick("up")', value='Up')
+				td
+			tr
+				td
+					input(type='button', class='button', onclick='controlclick("left")', value='Lt')
+				td
+				td
+					input(type='button', class='button', onclick='controlclick("right")', value='Rt')
+			tr
+				td
+				td
+					input(type='button', class='button', onclick='controlclick("down")', value='Dn')
+				td
 
-  script(type='text/javascript', src='/javascripts/controller.js')
+	div(class='controllerRight')
+		table
+			tr
+				td
+				td	
+					input(type='button', class='button', onclick='controlclick("triangle")', value='Tri')
+				td
+			tr
+				td
+					input(type='button', class='button', onclick='controlclick("square")', value='Sqr')
+				td
+				td
+					input(type='button', class='button', onclick='controlclick("circle")', value='Cir')
+			tr
+				td
+				td
+					input(type='button', class='button', onclick='controlclick("cross")', value='Crs')
+				td
+	div(class='clear')
+
+	p#orientation Device Orientation
+	table
+		tr 
+			td Event Supported
+			td#doEvent
+		tr 
+			td Tilt Left/Right [gamma]
+			td#doTiltLR
+		tr 
+			td Tilt Front/Back [beta]
+			td#doTiltFB
+		tr 
+			td Direction [alpha]
+			td#doDirection
+
+	p#acceleration Device Acceleration
+	table
+		tr
+			td Acceleration Event
+			td#dmEvent
+		tr
+			td Acceleration
+			td#moAccel
+		tr
+			td AccelerationIncludingGravity
+			td#moAccelGrav
+		tr
+			td rotationRate
+			td#moRotation
+		tr
+			td interval
+			td#moInterval
+
+	script(type='text/javascript', src='/javascripts/controller.js')
