--- a/views/controller.jade
+++ b/views/controller.jade
@@ -10,18 +10,18 @@ block content
 			tr
 				td
 				td
-					input(type='button', class='button', onclick='controlclick("up")', value='Up')
+					input(type='button', class='controller-button', data-key='up', value='Up')
 				td
 			tr
 				td
-					input(type='button', class='button', onclick='controlclick("left")', value='Lt')
+					input(type='button', class='controller-button', data-key='left', value='Lt')
 				td
 				td
-					input(type='button', class='button', onclick='controlclick("right")', value='Rt')
+					input(type='button', class='controller-button', data-key='right', value='Rt')
 			tr
 				td
 				td
-					input(type='button', class='button', onclick='controlclick("down")', value='Dn')
+					input(type='button', class='controller-button', data-key='down', value='Dn')
 				td
 
 	div(class='controllerRight')
@@ -29,18 +29,18 @@ block content
 			tr
 				td
 				td	
-					input(type='button', class='button', onclick='controlclick("triangle")', value='Tri')
+					input(type='button', class='controller-button', data-key='triangle', value='Tri')
 				td
 			tr
 				td
-					input(type='button', class='button', onclick='controlclick("square")', value='Sqr')
+					input(type='button', class='controller-button', data-key='square', value='Sqr')
 				td
 				td
-					input(type='button', class='button', onclick='controlclick("circle")', value='Cir')
+					input(type='button', class='controller-button', data-key='circle', value='Cir')
 			tr
 				td
 				td
-					input(type='button', class='button', onclick='controlclick("cross")', value='Crs')
+					input(type='button', class='controller-button', data-key='cross', value='Crs')
 				td
 	div(class='clear')
 
