--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,11 +3,13 @@ html
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
-
+    link(rel='stylesheet', href='/stylesheets/normalize.css')
+    script(type='application/javascript', src='/javascripts/fastclick.min.js')
+    script(type='application/javascript', src='/javascripts/jquery.1.10.2.min.js')
+    script(type='application/javascript', src='/javascripts/jquerymobile.1.3.2.min.js')
 
     script(type='text/javascript', src='/socket.io/socket.io.js')
     script(type='text/javascript', src='/javascripts/game.js')
-    script(type='application/javascript', src='/javascripts/fastclick.min.js')
     meta(name="viewport", content="initial-scale=1.0, user-scalable=no")
   body
     block content
