Swapped out jquery mobile for a custom build. Fixes the redirection problem as well since jquery mobile is not tinkering with my DOM

--- a/views/index.jade
+++ b/views/index.jade
@@ -18,4 +18,4 @@ block content
         label Controller
 
       div
-        input(type = 'submit')
+        input(type = 'submit', value='Enter')
