--- a/views/layout.jade
+++ b/views/layout.jade
@@ -6,7 +6,7 @@ html
     link(rel='stylesheet', href='/stylesheets/normalize.css')
     script(type='application/javascript', src='/javascripts/fastclick.min.js')
     script(type='application/javascript', src='/javascripts/jquery.1.10.2.min.js')
-    script(type='application/javascript', src='/javascripts/jquerymobile.1.3.2.min.js')
+    script(type='application/javascript', src='/javascripts/jquery.mobile.custom.min.js')
 
     script(type='text/javascript', src='/socket.io/socket.io.js')
     script(type='text/javascript', src='/javascripts/game.js')
