--- a/views/layout.jade
+++ b/views/layout.jade
@@ -9,7 +9,7 @@ html
     script(type='application/javascript', src='/javascripts/jquery.mobile.custom.min.js')
 
     script(type='text/javascript', src='/socket.io/socket.io.js')
-    script(type='text/javascript', src='/javascripts/game.js')
+    script(type='text/javascript', src='/javascripts/client.js')
     meta(name="viewport", content="initial-scale=1.0, user-scalable=no")
   body
     block content
