Add new controller specific changes for mobile

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -10,6 +10,7 @@ html
 
     script(type='text/javascript', src='/socket.io/socket.io.js')
     script(type='text/javascript', src='/javascripts/client.js')
-    meta(name="viewport", content="initial-scale=1.0, user-scalable=no")
+    meta(name="viewport", content="initial-scale=1.0, width=device.width")
+    block header
   body
     block content
